[package]
name = "dopen"
version = "0.1.0"
authors = ["Thayne McCombs <astrothayne@gmail.com>"]
description = "CLI to execute .desktop files"
edition = "2021"

[lib]
name = "libdopen"

[[bin]]
name = "dopen"
doc = false
test = false
required-features = ["clap"]

[dependencies]
# This should only be a dependency of the binary, but cargo doesn't support
# that yet
clap = {version = "3.1.18", optional = true}
# These are depenencies of nom
# but are needed because
# macro hygiene isn't good enough
# to encompass the dependency
once_cell = "1.12.0"
regex = "1.5.6"
nom = "7.1.1"
nom-regex = "0.2"
